Fix images too small

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -30,10 +30,8 @@ th, td {
 img {
 	display: flex;
     margin: auto;
-    width: auto;
     height: auto;
     max-width: 100%;
-    max-height: 100px;
 }
 
 ul li:not(:last-child) {
